# optstrat

./: LICENSE  README.md  example.py  pyproject.toml
src/optstrat/: __init__.py  option_strategy.py
