[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "optstrat"
version = "0.1.0"
description = "A small Python library for building options strategies"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
dependencies = ["numpy"]
authors = [
  { name = "Matías Roldán" }
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Intended Audience :: Developers",
  "Topic :: Office/Business :: Financial",
]

[project.urls]
Homepage = "https://github.com/roldan/optstrat"
Issues = "https://github.com/roldan/optstrat/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
